# live-translator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTRUCTION.md  LICENSE  PROJECT.md  README.md  scaffold.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/extension/: manifest.json  package-lock.json  package.json  vite.config.ts
apps/extension/src/background/: index.ts
apps/extension/src/content/: index.ts
apps/extension/src/lib/: audio-processor.js
apps/extension/src/offscreen/: offscreen.html  offscreen.ts
apps/extension/src/sidepanel/: index.html  index.tsx
apps/server/: main.py  pyproject.toml  start.ps1  start.sh  test_client.py
apps/server/api/: routes.py
apps/server/core/: asr_engine.py  translator.py  vad_sequencer.py
